--- a/exec/testbeds.yaml
+++ b/exec/testbeds.yaml
@@ -232,3 +232,7 @@ testbeds:
     testbed: topologies/cisco/hw/8201-32FH-FLM254306M8_OTG/keysight_otg.testbed
     binding: topologies/cisco/hw/8201-32FH-FLM254306M8_OTG/keysight_otg.binding
     baseconf: topologies/cisco/hw/8201-32FH-FLM254306M8_OTG/keysight_otg.proto
+    otg:
+      host: kne2-lnx
+      controller_port: 40061
+      gnmi_port: 50061
