--- a/exec/testbeds.yaml
+++ b/exec/testbeds.yaml
@@ -172,9 +172,13 @@ testbeds:
     sim: true
     topology: topologies/cisco/pyvxr/8201-1DUT-1ATE/topo.yaml
     baseconf: topologies/cisco/pyvxr/8201-1DUT-1ATE/basefp.conf
-  8201-1DUT-1ATE-vrf-mgmt:
+  8201-1DUT-1ATE-OTG:
     sim: true
     topology: topologies/cisco/pyvxr/8201-1DUT-1ATE/topo_otg.yaml
+    baseconf: topologies/cisco/pyvxr/8201-1DUT-1ATE/basefp.conf
+  8201-1DUT-1ATE-vrf-mgmt:
+    sim: true
+    topology: topologies/cisco/pyvxr/8201-1DUT-1ATE/topo.yaml
     baseconf: topologies/cisco/pyvxr/8201-1DUT-1ATE/basefp-mgmt-vrf.conf
   8202-1DUT-1ATE-vrf-mgmt:
     sim: true
