--- a/topologies/cisco/pyvxr/8201-1DUT-1ATE/topo_otg.yaml
+++ b/topologies/cisco/pyvxr/8201-1DUT-1ATE/topo_otg.yaml
@@ -1,14 +1,20 @@
-simulation: 
-  pyvxr_flags: 
+simulation:
+  pyvxr_flags:
     port_file_timeout: 10000
-    spitfire_cvac_override: true
-  sim_flags: 
-    - "-k ConfigEnableNgdp=true"
-  slurm_flags: 
+    spitfire_cvac_override: True
+  slurm_flags:
     hours: 72
     pending_timeout: 30
-devices: 
-  ixia-c:     
+devices:
+  dut:
+    cvac: $BASE_CONF_PATH
+    platform: spitfire_f
+    linecard_types: [churchill]
+    xr_hostname: DUT
+    xr_username: cisco
+    xr_password: cisco123
+    xr_port_redir: [22, 23, 57777]
+  ate:     
     platform: linux
     vcpu: 16
     memory: "32GB"
@@ -16,30 +22,18 @@ devices:
     linux_username: vxr
     linux_password: "cisco123"
     linux_prompt: 'vxr@vxr-vm:~\$'
-    xr_port_redir: [22, 35000, 31001, 31002, 31003] 
-  dut: 
-    cvac: $BASE_CONF_PATH
-    linecard_types: 
-      - churchill
-    platform: spitfire_f
-    xr_hostname: dut
-    xr_password: cisco123
-    xr_port_redir: 
-      - 22
-      - 23
-      - 57777
-    xr_username: cisco
-connections: 
-  hubs: 
-    port1: 
+    xr_port_redir: [22, 35000, 31001, 31002, 31003]  
+connections:
+  hubs:
+    DUT_T1_1:
       - dut.FourHundredGigE0/0/0/10
-      - ixia-c.eth1
-    port2: 
+      - ate.eth1
+    DUT_T2_1:
       - dut.FourHundredGigE0/0/0/11
-      - ixia-c.eth2
-    port3: 
+      - ate.eth2
+    DUT_T3_1:
       - dut.FourHundredGigE0/0/0/12
-      - ixia-c.eth3
-    port4: 
+      - ate.eth3
+    DUT_T4_1:
       - dut.FourHundredGigE0/0/0/13
-      - ixia-c.eth4
+      - ate.eth4
