--- a/topologies/cisco/pyvxr/8201-1DUT-1ATE/topo_otg.yaml
+++ b/topologies/cisco/pyvxr/8201-1DUT-1ATE/topo_otg.yaml
@@ -22,7 +22,9 @@ devices:
     linux_username: vxr
     linux_password: "cisco123"
     linux_prompt: 'vxr@vxr-vm:~\$'
-    xr_port_redir: [22, 35000, 31001, 31002, 31003]  
+    xr_port_redir: [22, 35000, 31001, 31002, 31003]
+    cli_commands: |
+      curl --data-raw '{"license-address": "10.85.70.247" }' http://localhost:35000/license 
 connections:
   hubs:
     DUT_T1_1:
